# memorizer

./: .coverage  .pre-commit-config.yaml  DEVELOPER_EXPERIENCE.md  Dockerfile  Dockerfile.dev  INTEGRATION_GUIDE.md  README.md  SUPABASE_SETUP.md  coverage.xml  demo.py  docker-compose.yml  env.example  memorizer.yaml  monitoring.env.example  mypy.ini  pyproject.toml  requirements-dev.txt  requirements-optional.txt  requirements.txt  setup.py  vectors.db
.github/workflows/: ci-cd.yml  ci.yml
archive/: FRAMEWORK_GUIDE.md  FRAMEWORK_README.md  INSTALLATION.md  MONITORING.md  PHASE1_IMPLEMENTATION.md  STRIPPED_DOWN_SUMMARY.md  USAGE.md
archive/_infrastructure_backup/: docker-compose.prod.yml  docker-compose.yml
archive/_infrastructure_backup/k8s/: namespace.yaml
archive/_infrastructure_backup/src/: rate_limiter.py
archive/_infrastructure_backup/src/analytics/: __init__.py  memory_analytics.py  optimization_advisor.py  usage_tracker.py
archive/_infrastructure_backup/src/api/: __init__.py  dashboard.py  framework_api.py  graphql_api.py
archive/_infrastructure_backup/src/cli/: memorizer_cli.py
archive/_infrastructure_backup/src/monitoring/: __init__.py  alerting_system.py  dashboard_generator.py  health_monitor.py  trace_analyzer.py
docs/: EXTERNAL_PROVIDERS.md
examples/: README.md  agent_memory_example.py  ai_integration_example.py  ai_team_usage_guide.py  comprehensive_framework_demo.py  demo.py  external_providers_example.py  framework_complete_example.py  framework_example.py  langchain_agent_example.py  llm_providers_example.py  quick_start_langchain.md  quickstart_example.py  real_world_chatbot.py  simple_memory_example.py
examples/config/: memorizer.yaml.example
k8s/: configmap.yaml  deployment.yaml
scripts/: init_db.py  llm_discovery.py  test_ai_integrations.py  test_ai_integrations_final.py  test_api_integration.py  test_framework.py  test_framework_fixes.py  test_implementation_progress.py  test_lifecycle_improvements.py  test_lifecycle_issues.py  test_new_structure.py  test_new_structure_simple.py
src/: __init__.py  agent_integrations.py  agent_interface.py  api.py  auth.py  automated_testing.py  celery_app.py  compression_agent.py  config.py  dashboard.py  db.py  embeddings.py  error_middleware.py  health.py  health_monitor.py  llm_providers.py  logging_config.py  memory_manager.py  memory_templates.py  metrics.py  performance_monitor.py  retrieval.py  security.py  tracing_middleware.py  type_checking.py  utils.py  vector_db.py
src/memorizer/: __init__.py
src/memorizer/builtins/: __init__.py  cache.py  embedding_providers.py  filters.py  retrievers.py  scorers.py  storage.py  summarizers.py  task_runners.py  vector_store_adapters.py  vector_stores.py
src/memorizer/core/: __init__.py  config.py  factory.py  framework.py  interfaces.py  lifecycle.py  registry.py  simple_config.py
src/memorizer/integrations/: __init__.py  agent_integrations.py  agent_profiles.py  ai_sdk_integration.py  crewai_integration.py  embeddings.py  framework_integrations.py  langchain_integration.py  supabase_client.py
src/memorizer/lifecycle/: __init__.py  compression_policies.py
src/memorizer/memory/: __init__.py  compression_agent.py  compression_metrics.py  memory_manager.py  simple_manager.py
src/memorizer/retrieval/: __init__.py  retrieval.py
src/memorizer/security/: __init__.py  pii_detection.py  security.py
src/memorizer/storage/: __init__.py  cache.py  db.py  external_providers.py  vector_db.py
src/memorizer/utils/: __init__.py  automated_testing.py  errors.py  json_schema_validator.py  logging_config.py  utils.py  validation.py
src/tasks/: embedding_tasks.py
supabase/functions/compress-memories/: index.ts
supabase/migrations/: 001_initial_schema.sql
tests/: __init__.py  conftest.py  test_basic.py  test_phase1_enhancements.py
